Added sensitivity and specificity

--- a/bme-master-thesis-szafeiris-results-analysis.ipynb
+++ b/bme-master-thesis-szafeiris-results-analysis.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,9 +117,360 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>featureSelectionMethodName</th>\n",
+       "      <th>classifierName</th>\n",
+       "      <th>datasetName</th>\n",
+       "      <th>isNormalized</th>\n",
+       "      <th>selectedFeaturesNo</th>\n",
+       "      <th>accuracy_score</th>\n",
+       "      <th>balanced_accuracy_score</th>\n",
+       "      <th>f1_score</th>\n",
+       "      <th>precision_score</th>\n",
+       "      <th>recall_score</th>\n",
+       "      <th>roc_auc_score</th>\n",
+       "      <th>cohen_kappa_score</th>\n",
+       "      <th>TN</th>\n",
+       "      <th>FP</th>\n",
+       "      <th>FN</th>\n",
+       "      <th>TP</th>\n",
+       "      <th>fullDatasetName</th>\n",
+       "      <th>sensitivity</th>\n",
+       "      <th>speficity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>boruta</td>\n",
+       "      <td>gnb</td>\n",
+       "      <td>original</td>\n",
+       "      <td>False</td>\n",
+       "      <td>67</td>\n",
+       "      <td>0.566667</td>\n",
+       "      <td>0.558644</td>\n",
+       "      <td>0.493506</td>\n",
+       "      <td>0.475000</td>\n",
+       "      <td>0.513514</td>\n",
+       "      <td>0.558644</td>\n",
+       "      <td>0.115869</td>\n",
+       "      <td>32</td>\n",
+       "      <td>21</td>\n",
+       "      <td>18</td>\n",
+       "      <td>19</td>\n",
+       "      <td>original</td>\n",
+       "      <td>0.513514</td>\n",
+       "      <td>0.603774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>boruta</td>\n",
+       "      <td>knn</td>\n",
+       "      <td>original</td>\n",
+       "      <td>False</td>\n",
+       "      <td>79</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>0.533333</td>\n",
+       "      <td>0.357143</td>\n",
+       "      <td>0.384615</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.533333</td>\n",
+       "      <td>0.068966</td>\n",
+       "      <td>44</td>\n",
+       "      <td>16</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>original</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.733333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>boruta</td>\n",
+       "      <td>rf</td>\n",
+       "      <td>original</td>\n",
+       "      <td>False</td>\n",
+       "      <td>178</td>\n",
+       "      <td>0.544444</td>\n",
+       "      <td>0.528571</td>\n",
+       "      <td>0.438356</td>\n",
+       "      <td>0.421053</td>\n",
+       "      <td>0.457143</td>\n",
+       "      <td>0.528571</td>\n",
+       "      <td>0.056266</td>\n",
+       "      <td>33</td>\n",
+       "      <td>22</td>\n",
+       "      <td>19</td>\n",
+       "      <td>16</td>\n",
+       "      <td>original</td>\n",
+       "      <td>0.457143</td>\n",
+       "      <td>0.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>boruta</td>\n",
+       "      <td>svm-linear</td>\n",
+       "      <td>original</td>\n",
+       "      <td>False</td>\n",
+       "      <td>130</td>\n",
+       "      <td>0.533333</td>\n",
+       "      <td>0.509259</td>\n",
+       "      <td>0.400000</td>\n",
+       "      <td>0.411765</td>\n",
+       "      <td>0.388889</td>\n",
+       "      <td>0.509259</td>\n",
+       "      <td>0.018692</td>\n",
+       "      <td>34</td>\n",
+       "      <td>20</td>\n",
+       "      <td>22</td>\n",
+       "      <td>14</td>\n",
+       "      <td>original</td>\n",
+       "      <td>0.388889</td>\n",
+       "      <td>0.629630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>boruta</td>\n",
+       "      <td>svm-rbf</td>\n",
+       "      <td>original</td>\n",
+       "      <td>False</td>\n",
+       "      <td>61</td>\n",
+       "      <td>0.644444</td>\n",
+       "      <td>0.581408</td>\n",
+       "      <td>0.407407</td>\n",
+       "      <td>0.550000</td>\n",
+       "      <td>0.323529</td>\n",
+       "      <td>0.581408</td>\n",
+       "      <td>0.177143</td>\n",
+       "      <td>47</td>\n",
+       "      <td>9</td>\n",
+       "      <td>23</td>\n",
+       "      <td>11</td>\n",
+       "      <td>original</td>\n",
+       "      <td>0.323529</td>\n",
+       "      <td>0.839286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>445</th>\n",
+       "      <td>surf</td>\n",
+       "      <td>knn</td>\n",
+       "      <td>muscle</td>\n",
+       "      <td>False</td>\n",
+       "      <td>78</td>\n",
+       "      <td>0.633333</td>\n",
+       "      <td>0.587963</td>\n",
+       "      <td>0.440678</td>\n",
+       "      <td>0.565217</td>\n",
+       "      <td>0.361111</td>\n",
+       "      <td>0.587963</td>\n",
+       "      <td>0.187192</td>\n",
+       "      <td>44</td>\n",
+       "      <td>10</td>\n",
+       "      <td>23</td>\n",
+       "      <td>13</td>\n",
+       "      <td>muscle</td>\n",
+       "      <td>0.361111</td>\n",
+       "      <td>0.814815</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>446</th>\n",
+       "      <td>surf</td>\n",
+       "      <td>rf</td>\n",
+       "      <td>muscle</td>\n",
+       "      <td>False</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.544444</td>\n",
+       "      <td>0.513664</td>\n",
+       "      <td>0.369231</td>\n",
+       "      <td>0.444444</td>\n",
+       "      <td>0.315789</td>\n",
+       "      <td>0.513664</td>\n",
+       "      <td>0.028436</td>\n",
+       "      <td>37</td>\n",
+       "      <td>15</td>\n",
+       "      <td>26</td>\n",
+       "      <td>12</td>\n",
+       "      <td>muscle</td>\n",
+       "      <td>0.315789</td>\n",
+       "      <td>0.711538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>447</th>\n",
+       "      <td>surf</td>\n",
+       "      <td>svm-linear</td>\n",
+       "      <td>muscle</td>\n",
+       "      <td>False</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0.588889</td>\n",
+       "      <td>0.516318</td>\n",
+       "      <td>0.177778</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.108108</td>\n",
+       "      <td>0.516318</td>\n",
+       "      <td>0.037016</td>\n",
+       "      <td>49</td>\n",
+       "      <td>4</td>\n",
+       "      <td>33</td>\n",
+       "      <td>4</td>\n",
+       "      <td>muscle</td>\n",
+       "      <td>0.108108</td>\n",
+       "      <td>0.924528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>448</th>\n",
+       "      <td>surf</td>\n",
+       "      <td>svm-rbf</td>\n",
+       "      <td>muscle</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.644444</td>\n",
+       "      <td>0.522143</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>0.444444</td>\n",
+       "      <td>0.129032</td>\n",
+       "      <td>0.522143</td>\n",
+       "      <td>0.053254</td>\n",
+       "      <td>54</td>\n",
+       "      <td>5</td>\n",
+       "      <td>27</td>\n",
+       "      <td>4</td>\n",
+       "      <td>muscle</td>\n",
+       "      <td>0.129032</td>\n",
+       "      <td>0.915254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>449</th>\n",
+       "      <td>surf</td>\n",
+       "      <td>xgb</td>\n",
+       "      <td>muscle</td>\n",
+       "      <td>False</td>\n",
+       "      <td>93</td>\n",
+       "      <td>0.455556</td>\n",
+       "      <td>0.447986</td>\n",
+       "      <td>0.379747</td>\n",
+       "      <td>0.357143</td>\n",
+       "      <td>0.405405</td>\n",
+       "      <td>0.447986</td>\n",
+       "      <td>-0.101949</td>\n",
+       "      <td>26</td>\n",
+       "      <td>27</td>\n",
+       "      <td>22</td>\n",
+       "      <td>15</td>\n",
+       "      <td>muscle</td>\n",
+       "      <td>0.405405</td>\n",
+       "      <td>0.490566</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>450 rows × 19 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    featureSelectionMethodName classifierName datasetName  isNormalized  \\\n",
+       "0                       boruta            gnb    original         False   \n",
+       "1                       boruta            knn    original         False   \n",
+       "2                       boruta             rf    original         False   \n",
+       "3                       boruta     svm-linear    original         False   \n",
+       "4                       boruta        svm-rbf    original         False   \n",
+       "..                         ...            ...         ...           ...   \n",
+       "445                       surf            knn      muscle         False   \n",
+       "446                       surf             rf      muscle         False   \n",
+       "447                       surf     svm-linear      muscle         False   \n",
+       "448                       surf        svm-rbf      muscle         False   \n",
+       "449                       surf            xgb      muscle         False   \n",
+       "\n",
+       "     selectedFeaturesNo  accuracy_score  balanced_accuracy_score  f1_score  \\\n",
+       "0                    67        0.566667                 0.558644  0.493506   \n",
+       "1                    79        0.600000                 0.533333  0.357143   \n",
+       "2                   178        0.544444                 0.528571  0.438356   \n",
+       "3                   130        0.533333                 0.509259  0.400000   \n",
+       "4                    61        0.644444                 0.581408  0.407407   \n",
+       "..                  ...             ...                      ...       ...   \n",
+       "445                  78        0.633333                 0.587963  0.440678   \n",
+       "446                   8        0.544444                 0.513664  0.369231   \n",
+       "447                  28        0.588889                 0.516318  0.177778   \n",
+       "448                   3        0.644444                 0.522143  0.200000   \n",
+       "449                  93        0.455556                 0.447986  0.379747   \n",
+       "\n",
+       "     precision_score  recall_score  roc_auc_score  cohen_kappa_score  TN  FP  \\\n",
+       "0           0.475000      0.513514       0.558644           0.115869  32  21   \n",
+       "1           0.384615      0.333333       0.533333           0.068966  44  16   \n",
+       "2           0.421053      0.457143       0.528571           0.056266  33  22   \n",
+       "3           0.411765      0.388889       0.509259           0.018692  34  20   \n",
+       "4           0.550000      0.323529       0.581408           0.177143  47   9   \n",
+       "..               ...           ...            ...                ...  ..  ..   \n",
+       "445         0.565217      0.361111       0.587963           0.187192  44  10   \n",
+       "446         0.444444      0.315789       0.513664           0.028436  37  15   \n",
+       "447         0.500000      0.108108       0.516318           0.037016  49   4   \n",
+       "448         0.444444      0.129032       0.522143           0.053254  54   5   \n",
+       "449         0.357143      0.405405       0.447986          -0.101949  26  27   \n",
+       "\n",
+       "     FN  TP fullDatasetName  sensitivity  speficity  \n",
+       "0    18  19        original     0.513514   0.603774  \n",
+       "1    20  10        original     0.333333   0.733333  \n",
+       "2    19  16        original     0.457143   0.600000  \n",
+       "3    22  14        original     0.388889   0.629630  \n",
+       "4    23  11        original     0.323529   0.839286  \n",
+       "..   ..  ..             ...          ...        ...  \n",
+       "445  23  13          muscle     0.361111   0.814815  \n",
+       "446  26  12          muscle     0.315789   0.711538  \n",
+       "447  33   4          muscle     0.108108   0.924528  \n",
+       "448  27   4          muscle     0.129032   0.915254  \n",
+       "449  22  15          muscle     0.405405   0.490566  \n",
+       "\n",
+       "[450 rows x 19 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "origDatasetPath = Path('./data/results/original_results.csv')\n",
     "origDataset = pd.read_csv(origDatasetPath.absolute())\n",
@@ -143,8 +494,12 @@
     "merged = pd.concat([origDataset, origNormDataset, n4Dataset, n4NormDataset, fatDataset, muscleDataset], ignore_index=True)\n",
     "merged.sort_values(by=['balanced_accuracy_score', 'roc_auc_score', 'datasetName', 'featureSelectionMethodName', 'classifierName'])\n",
     "\n",
-    "# Add an extra column\n",
-    "merged['fullDatasetName'] = merged.apply(lambda x: f\"{x['datasetName']}{'_norm' if x['isNormalized'] else ''}\", axis=1)"
+    "# Add extra columns\n",
+    "merged['fullDatasetName'] = merged.apply(lambda x: f\"{x['datasetName']}{'_norm' if x['isNormalized'] else ''}\", axis=1)\n",
+    "\n",
+    "merged['sensitivity'] = merged.apply(lambda x: x[\"TP\"] / (x[\"TP\"] + x[\"FN\"]), axis=1)\n",
+    "merged['speficity'] = merged.apply(lambda x: x[\"TN\"] / (x[\"TN\"] + x[\"FP\"]), axis=1)\n",
+    "merged"
    ]
   },
   {
@@ -157,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +583,7 @@
        "original_norm       74"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +984,7 @@
        "Name: balanced_accuracy_score, dtype: float64"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
