Update results notebook

--- a/bme-master-thesis-szafeiris-results-analysis.ipynb
+++ b/bme-master-thesis-szafeiris-results-analysis.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
        "[466 rows x 19 columns]"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
        "original_norm       76"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1546,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2568,7 +2568,7 @@
        "458  22  12          muscle     0.352941   0.875000  "
       ]
      },
-     "execution_count": 184,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2578,6 +2578,27 @@
     "\n",
     "# topRows['fullDatasetName'].unique().tolist()\n",
     "topRows\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['boruta', 'cmim', 'jmi', 'lasso', 'mifs', 'mrmr', 'multisurfstar', 'multisurf', 'pearson', 'relieff', 'spearman', 'surfstar']\n",
+      "['xgb', 'svm-linear', 'knn', 'gnb', 'rf', 'svm-rbf']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Get unique for each column\n",
+    "\n",
+    "print(topRows['featureSelectionMethodName'].unique().tolist())\n",
+    "print(topRows['classifierName'].unique().tolist())\n"
    ]
   },
   {
