Preparation for hybrid optimal run

--- a/bme-master-thesis-szafeiris-results-analysis.ipynb
+++ b/bme-master-thesis-szafeiris-results-analysis.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "[538 rows x 20 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
        "original_norm       88"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1003,7 @@
        "Name: balanced_accuracy_score, dtype: float64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -3326,7 +3326,7 @@
        "530     0.352941   0.875000  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3340,7 +3340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -3361,7 +3361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -3390,6 +3390,7 @@
        "      <th>classifierName</th>\n",
        "      <th>balanced_accuracy_score</th>\n",
        "      <th>selectedFeaturesNo</th>\n",
+       "      <th>selectedThreshold</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3400,6 +3401,7 @@
        "      <td>xgb</td>\n",
        "      <td>0.671851</td>\n",
        "      <td>73</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -3408,6 +3410,7 @@
        "      <td>svm-linear</td>\n",
        "      <td>0.636364</td>\n",
        "      <td>486</td>\n",
+       "      <td>0.95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -3416,6 +3419,7 @@
        "      <td>svm-linear</td>\n",
        "      <td>0.636364</td>\n",
        "      <td>486</td>\n",
+       "      <td>0.95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -3424,6 +3428,7 @@
        "      <td>knn</td>\n",
        "      <td>0.667017</td>\n",
        "      <td>68</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -3432,6 +3437,7 @@
        "      <td>rf</td>\n",
        "      <td>0.621651</td>\n",
        "      <td>23</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -3440,6 +3446,7 @@
        "      <td>rf</td>\n",
        "      <td>0.621651</td>\n",
        "      <td>23</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -3448,6 +3455,7 @@
        "      <td>svm-rbf</td>\n",
        "      <td>0.630927</td>\n",
        "      <td>18</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3463,17 +3471,17 @@
        "5             fat                       mrmr             rf   \n",
        "6          muscle                  multisurf        svm-rbf   \n",
        "\n",
-       "   balanced_accuracy_score  selectedFeaturesNo  \n",
-       "0                 0.671851                  73  \n",
-       "1                 0.636364                 486  \n",
-       "2                 0.636364                 486  \n",
-       "3                 0.667017                  68  \n",
-       "4                 0.621651                  23  \n",
-       "5                 0.621651                  23  \n",
-       "6                 0.630927                  18  "
+       "   balanced_accuracy_score  selectedFeaturesNo  selectedThreshold  \n",
+       "0                 0.671851                  73               0.00  \n",
+       "1                 0.636364                 486               0.95  \n",
+       "2                 0.636364                 486               0.95  \n",
+       "3                 0.667017                  68               0.00  \n",
+       "4                 0.621651                  23               0.00  \n",
+       "5                 0.621651                  23               0.00  \n",
+       "6                 0.630927                  18               0.00  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3482,7 +3490,7 @@
     "idxs = topRows.groupby('fullDatasetName')['balanced_accuracy_score'].transform(max) == topRows['balanced_accuracy_score']\n",
     "df = topRows[idxs].reset_index()\n",
     "\n",
-    "df = df[['fullDatasetName', 'featureSelectionMethodName', 'classifierName', 'balanced_accuracy_score', 'selectedFeaturesNo']]\n",
+    "df = df[['fullDatasetName', 'featureSelectionMethodName', 'classifierName', 'balanced_accuracy_score', 'selectedFeaturesNo', 'selectedThreshold']]\n",
     "df\n",
     "\n",
     "# from pandas.plotting import table\n",
