--- a/bme-master-thesis-szafeiris-results-analysis.ipynb
+++ b/bme-master-thesis-szafeiris-results-analysis.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "[538 rows x 20 columns]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
        "original_norm       88"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3203,6 +3203,364 @@
     "\n",
     "# table(ax, df, rowLabels=None)  # where df is your data frame\n",
     "# plt.savefig('test.png', bbox_inches='tight')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>featureSelectionMethodName</th>\n",
+       "      <th>classifierName</th>\n",
+       "      <th>datasetName</th>\n",
+       "      <th>isNormalized</th>\n",
+       "      <th>selectedFeaturesNo</th>\n",
+       "      <th>selectedThreshold</th>\n",
+       "      <th>accuracy_score</th>\n",
+       "      <th>balanced_accuracy_score</th>\n",
+       "      <th>f1_score</th>\n",
+       "      <th>precision_score</th>\n",
+       "      <th>recall_score</th>\n",
+       "      <th>roc_auc_score</th>\n",
+       "      <th>cohen_kappa_score</th>\n",
+       "      <th>TN</th>\n",
+       "      <th>FP</th>\n",
+       "      <th>FN</th>\n",
+       "      <th>TP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>pearson</td>\n",
+       "      <td>svm-linear</td>\n",
+       "      <td>muscle</td>\n",
+       "      <td>False</td>\n",
+       "      <td>178</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.588889</td>\n",
+       "      <td>0.570130</td>\n",
+       "      <td>0.478873</td>\n",
+       "      <td>0.472222</td>\n",
+       "      <td>0.485714</td>\n",
+       "      <td>0.570130</td>\n",
+       "      <td>0.139535</td>\n",
+       "      <td>36</td>\n",
+       "      <td>19</td>\n",
+       "      <td>18</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>spearman</td>\n",
+       "      <td>svm-linear</td>\n",
+       "      <td>muscle</td>\n",
+       "      <td>False</td>\n",
+       "      <td>178</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.588889</td>\n",
+       "      <td>0.570130</td>\n",
+       "      <td>0.478873</td>\n",
+       "      <td>0.472222</td>\n",
+       "      <td>0.485714</td>\n",
+       "      <td>0.570130</td>\n",
+       "      <td>0.139535</td>\n",
+       "      <td>36</td>\n",
+       "      <td>19</td>\n",
+       "      <td>18</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>spearman</td>\n",
+       "      <td>xgb</td>\n",
+       "      <td>muscle</td>\n",
+       "      <td>False</td>\n",
+       "      <td>260</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.577778</td>\n",
+       "      <td>0.555844</td>\n",
+       "      <td>0.457143</td>\n",
+       "      <td>0.457143</td>\n",
+       "      <td>0.457143</td>\n",
+       "      <td>0.555844</td>\n",
+       "      <td>0.111688</td>\n",
+       "      <td>36</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>pearson</td>\n",
+       "      <td>xgb</td>\n",
+       "      <td>muscle</td>\n",
+       "      <td>False</td>\n",
+       "      <td>260</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.577778</td>\n",
+       "      <td>0.555844</td>\n",
+       "      <td>0.457143</td>\n",
+       "      <td>0.457143</td>\n",
+       "      <td>0.457143</td>\n",
+       "      <td>0.555844</td>\n",
+       "      <td>0.111688</td>\n",
+       "      <td>36</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>pearson</td>\n",
+       "      <td>rf</td>\n",
+       "      <td>muscle</td>\n",
+       "      <td>False</td>\n",
+       "      <td>512</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>0.588889</td>\n",
+       "      <td>0.549351</td>\n",
+       "      <td>0.412698</td>\n",
+       "      <td>0.464286</td>\n",
+       "      <td>0.371429</td>\n",
+       "      <td>0.549351</td>\n",
+       "      <td>0.102426</td>\n",
+       "      <td>40</td>\n",
+       "      <td>15</td>\n",
+       "      <td>22</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>pearson</td>\n",
+       "      <td>svm-rbf</td>\n",
+       "      <td>muscle</td>\n",
+       "      <td>False</td>\n",
+       "      <td>260</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.588889</td>\n",
+       "      <td>0.523377</td>\n",
+       "      <td>0.301887</td>\n",
+       "      <td>0.444444</td>\n",
+       "      <td>0.228571</td>\n",
+       "      <td>0.523377</td>\n",
+       "      <td>0.051282</td>\n",
+       "      <td>45</td>\n",
+       "      <td>10</td>\n",
+       "      <td>27</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>spearman</td>\n",
+       "      <td>svm-rbf</td>\n",
+       "      <td>muscle</td>\n",
+       "      <td>False</td>\n",
+       "      <td>260</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.588889</td>\n",
+       "      <td>0.523377</td>\n",
+       "      <td>0.301887</td>\n",
+       "      <td>0.444444</td>\n",
+       "      <td>0.228571</td>\n",
+       "      <td>0.523377</td>\n",
+       "      <td>0.051282</td>\n",
+       "      <td>45</td>\n",
+       "      <td>10</td>\n",
+       "      <td>27</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>spearman</td>\n",
+       "      <td>gnb</td>\n",
+       "      <td>muscle</td>\n",
+       "      <td>False</td>\n",
+       "      <td>512</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>0.566667</td>\n",
+       "      <td>0.510390</td>\n",
+       "      <td>0.315789</td>\n",
+       "      <td>0.409091</td>\n",
+       "      <td>0.257143</td>\n",
+       "      <td>0.510390</td>\n",
+       "      <td>0.022284</td>\n",
+       "      <td>42</td>\n",
+       "      <td>13</td>\n",
+       "      <td>26</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>pearson</td>\n",
+       "      <td>gnb</td>\n",
+       "      <td>muscle</td>\n",
+       "      <td>False</td>\n",
+       "      <td>512</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>0.566667</td>\n",
+       "      <td>0.510390</td>\n",
+       "      <td>0.315789</td>\n",
+       "      <td>0.409091</td>\n",
+       "      <td>0.257143</td>\n",
+       "      <td>0.510390</td>\n",
+       "      <td>0.022284</td>\n",
+       "      <td>42</td>\n",
+       "      <td>13</td>\n",
+       "      <td>26</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>spearman</td>\n",
+       "      <td>rf</td>\n",
+       "      <td>muscle</td>\n",
+       "      <td>False</td>\n",
+       "      <td>145</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>0.566667</td>\n",
+       "      <td>0.505195</td>\n",
+       "      <td>0.290909</td>\n",
+       "      <td>0.400000</td>\n",
+       "      <td>0.228571</td>\n",
+       "      <td>0.505195</td>\n",
+       "      <td>0.011268</td>\n",
+       "      <td>43</td>\n",
+       "      <td>12</td>\n",
+       "      <td>27</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>spearman</td>\n",
+       "      <td>knn</td>\n",
+       "      <td>muscle</td>\n",
+       "      <td>False</td>\n",
+       "      <td>210</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.477778</td>\n",
+       "      <td>0.463636</td>\n",
+       "      <td>0.373333</td>\n",
+       "      <td>0.350000</td>\n",
+       "      <td>0.400000</td>\n",
+       "      <td>0.463636</td>\n",
+       "      <td>-0.070886</td>\n",
+       "      <td>29</td>\n",
+       "      <td>26</td>\n",
+       "      <td>21</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>pearson</td>\n",
+       "      <td>knn</td>\n",
+       "      <td>muscle</td>\n",
+       "      <td>False</td>\n",
+       "      <td>210</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.477778</td>\n",
+       "      <td>0.463636</td>\n",
+       "      <td>0.373333</td>\n",
+       "      <td>0.350000</td>\n",
+       "      <td>0.400000</td>\n",
+       "      <td>0.463636</td>\n",
+       "      <td>-0.070886</td>\n",
+       "      <td>29</td>\n",
+       "      <td>26</td>\n",
+       "      <td>21</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   featureSelectionMethodName classifierName datasetName  isNormalized  \\\n",
+       "57                    pearson     svm-linear      muscle         False   \n",
+       "75                   spearman     svm-linear      muscle         False   \n",
+       "77                   spearman            xgb      muscle         False   \n",
+       "59                    pearson            xgb      muscle         False   \n",
+       "56                    pearson             rf      muscle         False   \n",
+       "58                    pearson        svm-rbf      muscle         False   \n",
+       "76                   spearman        svm-rbf      muscle         False   \n",
+       "72                   spearman            gnb      muscle         False   \n",
+       "54                    pearson            gnb      muscle         False   \n",
+       "74                   spearman             rf      muscle         False   \n",
+       "73                   spearman            knn      muscle         False   \n",
+       "55                    pearson            knn      muscle         False   \n",
+       "\n",
+       "    selectedFeaturesNo  selectedThreshold  accuracy_score  \\\n",
+       "57                 178               0.75        0.588889   \n",
+       "75                 178               0.75        0.588889   \n",
+       "77                 260               0.85        0.577778   \n",
+       "59                 260               0.85        0.577778   \n",
+       "56                 512               0.95        0.588889   \n",
+       "58                 260               0.85        0.588889   \n",
+       "76                 260               0.85        0.588889   \n",
+       "72                 512               0.95        0.566667   \n",
+       "54                 512               0.95        0.566667   \n",
+       "74                 145               0.70        0.566667   \n",
+       "73                 210               0.80        0.477778   \n",
+       "55                 210               0.80        0.477778   \n",
+       "\n",
+       "    balanced_accuracy_score  f1_score  precision_score  recall_score  \\\n",
+       "57                 0.570130  0.478873         0.472222      0.485714   \n",
+       "75                 0.570130  0.478873         0.472222      0.485714   \n",
+       "77                 0.555844  0.457143         0.457143      0.457143   \n",
+       "59                 0.555844  0.457143         0.457143      0.457143   \n",
+       "56                 0.549351  0.412698         0.464286      0.371429   \n",
+       "58                 0.523377  0.301887         0.444444      0.228571   \n",
+       "76                 0.523377  0.301887         0.444444      0.228571   \n",
+       "72                 0.510390  0.315789         0.409091      0.257143   \n",
+       "54                 0.510390  0.315789         0.409091      0.257143   \n",
+       "74                 0.505195  0.290909         0.400000      0.228571   \n",
+       "73                 0.463636  0.373333         0.350000      0.400000   \n",
+       "55                 0.463636  0.373333         0.350000      0.400000   \n",
+       "\n",
+       "    roc_auc_score  cohen_kappa_score  TN  FP  FN  TP  \n",
+       "57       0.570130           0.139535  36  19  18  17  \n",
+       "75       0.570130           0.139535  36  19  18  17  \n",
+       "77       0.555844           0.111688  36  19  19  16  \n",
+       "59       0.555844           0.111688  36  19  19  16  \n",
+       "56       0.549351           0.102426  40  15  22  13  \n",
+       "58       0.523377           0.051282  45  10  27   8  \n",
+       "76       0.523377           0.051282  45  10  27   8  \n",
+       "72       0.510390           0.022284  42  13  26   9  \n",
+       "54       0.510390           0.022284  42  13  26   9  \n",
+       "74       0.505195           0.011268  43  12  27   8  \n",
+       "73       0.463636          -0.070886  29  26  21  14  \n",
+       "55       0.463636          -0.070886  29  26  21  14  "
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = muscleDataset.sort_values(by='balanced_accuracy_score', ascending=False)\n",
+    "p.loc[(p['featureSelectionMethodName'] == 'spearman') | (p['featureSelectionMethodName'] == 'pearson') ]\n"
    ]
   }
  ],
