Hybrid results analysis addition

--- a/bme-master-thesis-szafeiris-results-analysis.ipynb
+++ b/bme-master-thesis-szafeiris-results-analysis.ipynb
@@ -3544,9 +3544,46 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Analyse Hybrid analysis results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bal. acc.: 0.6181818181818182 - Pearson.\n",
+      "Bal. acc.: 0.5272727272727272 - Pearson Fat.\n",
+      "Bal. acc.: 0.5844155844155844 - Pearson Muscle.\n",
+      "Bal. acc.: 0.5961038961038961 - Pearson N4.\n",
+      "Bal. acc.: 0.5389610389610389 - Pearson N4 Norm.\n",
+      "Bal. acc.: 0.5493506493506494 - Pearson Norm.\n",
+      "Bal. acc.: 0.6181818181818182 - Spearman.\n",
+      "Bal. acc.: 0.5454545454545454 - Spearman Fat.\n",
+      "Bal. acc.: 0.5844155844155844 - Spearman Muscle.\n",
+      "Bal. acc.: 0.5961038961038961 - Spearman N4.\n",
+      "Bal. acc.: 0.6077922077922078 - Spearman N4 Norm.\n",
+      "Bal. acc.: 0.5493506493506494 - Spearman Norm.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "hybridResultsPath = Path('./data/results/hybrid_results/')\n",
+    "for resultPath in hybridResultsPath.glob('*'):\n",
+    "    resultName = resultPath.name.replace('hybrid_optimals_', '').replace('.json', '')\n",
+    "    data = json.load(open(resultPath, 'r'))\n",
+    "    \n",
+    "    print(f\"Bal. acc.: {data['balanced_accuracy']} - {resultName.replace('_', ' ').title()}.\")"
+   ]
   }
  ],
  "metadata": {
