--- a/bme-master-thesis-szafeiris-results-analysis.ipynb
+++ b/bme-master-thesis-szafeiris-results-analysis.ipynb
@@ -19,12 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import pandas as pd\n",
+    "import json\n",
     "from matplotlib import pyplot as plt"
    ]
   },
@@ -3553,7 +3554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -3576,8 +3577,73 @@
     }
    ],
    "source": [
-    "import json\n",
-    "hybridResultsPath = Path('./data/results/hybrid_results/')\n",
+    "hybridResultsPath = Path('./data/results/hybrid_results/rbest/')\n",
+    "for resultPath in hybridResultsPath.glob('*'):\n",
+    "    resultName = resultPath.name.replace('hybrid_optimals_', '').replace('.json', '')\n",
+    "    data = json.load(open(resultPath, 'r'))\n",
+    "    \n",
+    "    print(f\"Bal. acc.: {data['balanced_accuracy']} - {resultName.replace('_', ' ').title()}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bal. acc.: 0.6636363636363636 - Pearson | pearson/cmim/xgb (73).\n",
+      "Bal. acc.: 0.5064935064935066 - Pearson Fat | pearson/mrmr/rf (78).\n",
+      "Bal. acc.: 0.5883116883116883 - Pearson Muscle | pearson/multisurf/svm-rbf (113).\n",
+      "Bal. acc.: 0.5402597402597402 - Pearson N4 | pearson/relieff/knn (18).\n",
+      "Bal. acc.: 0.5532467532467533 - Pearson N4 Norm | pearson/mrmr/rf (173).\n",
+      "Bal. acc.: 0.5701298701298702 - Pearson Norm | pearson/multisurf/svm-linear (38).\n",
+      "Bal. acc.: 0.6636363636363636 - Spearman | spearman/cmim/xgb (73).\n",
+      "Bal. acc.: 0.5532467532467533 - Spearman Fat | spearman/mrmr/rf (118).\n",
+      "Bal. acc.: 0.5883116883116883 - Spearman Muscle | spearman/multisurf/svm-rbf (113).\n",
+      "Bal. acc.: 0.5402597402597402 - Spearman N4 | spearman/relieff/knn (18).\n",
+      "Bal. acc.: 0.5012987012987014 - Spearman N4 Norm | spearman/mrmr/rf (168).\n",
+      "Bal. acc.: 0.5701298701298702 - Spearman Norm | spearman/multisurf/svm-linear (38).\n"
+     ]
+    }
+   ],
+   "source": [
+    "hybridResultsPath = Path('./data/results/hybrid_results/rbest_cv/')\n",
+    "for resultPath in hybridResultsPath.glob('*'):\n",
+    "    resultName = resultPath.name.replace('hybrid_optimals_', '').replace('.json', '')\n",
+    "    data = json.load(open(resultPath, 'r'))\n",
+    "    \n",
+    "    print(f\"Bal. acc.: {data['balanced_accuracy']} - {resultName.replace('_', ' ').title()} | {data['name']} ({data['params'][1]}).\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bal. acc.: 0.5636363636363637 - Pearson.\n",
+      "Bal. acc.: 0.5428571428571428 - Pearson Fat.\n",
+      "Bal. acc.: 0.612987012987013 - Pearson Muscle.\n",
+      "Bal. acc.: 0.5961038961038961 - Pearson N4.\n",
+      "Bal. acc.: 0.5194805194805194 - Pearson N4 Norm.\n",
+      "Bal. acc.: 0.6363636363636364 - Pearson Norm.\n",
+      "Bal. acc.: 0.5636363636363637 - Spearman.\n",
+      "Bal. acc.: 0.5818181818181818 - Spearman Fat.\n",
+      "Bal. acc.: 0.612987012987013 - Spearman Muscle.\n",
+      "Bal. acc.: 0.5961038961038961 - Spearman N4.\n",
+      "Bal. acc.: 0.5298701298701298 - Spearman N4 Norm.\n",
+      "Bal. acc.: 0.6363636363636364 - Spearman Norm.\n"
+     ]
+    }
+   ],
+   "source": [
+    "hybridResultsPath = Path('./data/results/hybrid_results/r0.95/')\n",
     "for resultPath in hybridResultsPath.glob('*'):\n",
     "    resultName = resultPath.name.replace('hybrid_optimals_', '').replace('.json', '')\n",
     "    data = json.load(open(resultPath, 'r'))\n",
